# xi-word-count

./: .gitignore  Cargo.toml  Makefile  README.md  manifest.toml
src/: main.rs
